# brainframe

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .metadata  .pre-commit-config.yaml  CLAUDE.md  README.md  analysis_options.yaml  go.mod  l10n.yaml  pubspec.yaml
.claude/rules/: accessibility.md  git-workflow.md  visual-verification.md
.github/workflows/: coverage.yml  l10n.yml  test-plan-nudge.yml
android/app/: build.gradle  build.gradle.kts
cmd/bfconf/: default-config.conf  main_test.go
cmd/bfnote/: main.go
dataaccess/: filestorage.go
docs/: debug-build-identity.md  manual-test-plan.md
docs/design/: engram-storage.md  i18n.md  markdown-editing.md
docs/plans/: engram-storage-impl.md  i18n-impl.md  markdown-editing-impl.md
flutter/: README.md  pubspec.yaml
flutter/lib/: config.dart  platform.dart  (+1 more)
lib/: app.dart  cli_output.dart  cli_output_io.dart  cli_output_stub.dart  config.dart  home_page.dart  main.dart  platform.dart  prefs.dart  startup_options.dart
linux/: CMakeLists.txt  main.cc  my_application.cc
python/: README.md  pyproject.toml  setup.py
python/brainframe/: __init__.py  config.py  main.py  repl.py
python/src/brainframe/: articles.py  config.py  journey_cloud.py  repl.py
scripts/: install.ps1  install.sh
src/: go.sum
test/: accessibility_test.dart  home_page_test.dart  startup_options_test.dart  widget_test.dart
tool/: appshot.sh  check_l10n.dart  coverage.sh  gen_coverage_helper.dart  gen_debug_icons.py  gen_pseudo_arb.dart  without_git_env.js
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+165 files in other folders)
